- Fix bug causing torrent to get stalled at startup in some rare situations
- Fix crash at exit
- Fix bug causing problems when multiple fileselect dialogs were shown at the same time (183078)
- Fix bug causing not all tracker groups to get removed when tracker_groups.py is unloaded
- Fix crash when removing the only torrent of a tracker based group (183413)

Changes in 3.2rc1 :
- Fix bug in webgui causing wrong content-length to be returned in some cases
- Add cmake check for libtaskmanager which is needed by the plasma applet
- Make sure ratio limit and seed time limit spinboxes in statustab only emit the valueChanged signal when the user is done editing the spinbox (175625)
- Don't show error message when torrent is loaded silently and the files can't be created (ported from stable)
- Fix crash in plasma applet
- Added select all action, manual announce now gets SHIFT + A as shortcut to not conflict with select all 
- Make sure average download speed calculation doesn't wrap around (175747)
- Update buttons when torrent changes status (174815)
- Fix pause button getting disabled when current view doesn't have any torrents (176442)
- Fix bug causing webseeds to prevent chunks from getting downloaded
- Make sure plasma applet restores it's geometry properly and remembers the current torrent
- Make sure initial log rotation doesn't show any progress dialogs
- Fix open in new tab action in search plugin
- Change meaning of active to transferring data
- Inactive groups become passive groups
- Fix bug causing queueingNotPossible message to be shown multiple times (176732)
- Make sure group policy is applied when drag and drop is used to add torrents to a group (176723)
- Make sure preview priority is not set on excluded or only seed files (176487)
- Make sure to long filenames are handled properly (175793)
- Fix bug causing files to be created in diskspace check 
- Fix problem with restoring file encoding (177179)
- Make sure window size is restored properly