@@ -6,6 +6,8 @@ Changes in 3.2 :
 - Fix bug causing problems when multiple fileselect dialogs were shown at the same time (183078)
 - Fix bug causing not all tracker groups to get removed when tracker_groups.py is unloaded
 - Fix crash when removing the only torrent of a tracker based group (183413)
+- Make sure that when a chunk is downloaded via a webseed the chunkmanager is updated
+- Don't throw away data when webseed connection closes
 
 Changes in 3.2rc1 :
 - Fix bug in webgui causing wrong content-length to be returned in some cases
